--- a/gitHubBlocks/style.css
+++ b/gitHubBlocks/style.css
@@ -1,43 +1,63 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-.pageWrapper{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+.pageWrapper {
+  background-color: red;
+  min-height: 500px;
+  width: 600px;
+  background-color: powderblue;
+  padding: 1em;
 }
 
-.title{
-    font-size: larger;
-    align-items: center;
-    justify-content: center;
+.title {
+  font-size:xx-large;
+  width: 580px;
+  text-align: center;
+  padding: 1em;
+  font-weight: 500;
+  color: black;
 }
 
-.top{
-    align-items: center;
-    justify-content: space-evenly;
+.top {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: skyblue;
+  padding: 1em;
 }
 
-.middle{
-    align-items: center;
-    justify-content: space-evenly;
+.middle {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: slategray;
+  padding: 1em;
 }
 
-.bottom{
-    align-items: center;
-    justify-content: space-evenly;
+.bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: snow;
+  padding: 1em;
 }
 
-.foot{
-    align-items: center;
-    justify-content: space-evenly;
+.pic {
+  height: 150px;
+  width: 150px;
 }
 
-.content{
-    overflow: hidden;
-    height: 150px;
-    width: 150px;
+.foot {
+  text-align: center;
+  justify-content: space-evenly;
+  padding: 1em;
+}
+
+.content {
+  overflow: hidden;
+  height: 160px;
+  width: 160px;
 }
